// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelSelectorInput Allows to remove labels 1`] = `
Array [
  Array [
    Object {
      "b": "b",
    },
  ],
]
`;

exports[`LabelSelectorInput Fires onChange when valid label is entered 1`] = `
Array [
  Array [
    Object {
      "abc": "def",
    },
  ],
]
`;

exports[`LabelSelectorInput Renders labels 1`] = `
Array [
  <Label
    key="a=a"
    onClick={[Function]}
    text="a=a"
  />,
  <Label
    key="b=b"
    onClick={[Function]}
    text="b=b"
  />,
]
`;

exports[`LabelSelectorInput Renders readonly labels 1`] = `
Array [
  <NonRemovableLabel
    key="a=a"
    text="a=a"
  />,
  <NonRemovableLabel
    key="b=b"
    text="b=b"
  />,
]
`;
